--- a/main.html
+++ b/main.html
@@ -3,13 +3,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
 </head>
 <body>
+<body>
 <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #EA4E4C;
-        font-family: "Arial", sans-serif;
+        font-family: "Salesforce Sans", sans-serif;
     }
     .embeddedServiceHelpButton .helpButton .uiButton:focus {
         outline: 1px solid #EA4E4C;
+    }
+    @font-face {
+        font-family: 'Salesforce Sans';
+        src: url('https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.woff') format('woff'),
+        url('https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.ttf') format('truetype');
     }
 </style>
 
@@ -17,12 +23,12 @@
 <script type='text/javascript'>
     var initESW = function(gslbBaseURL) {
         embedded_svc.settings.displayHelpButton = true; //Or false
-        embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+        embedded_svc.settings.language = 'es'; //For example, enter 'en' or 'en-US'
 
-        //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-        //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+        embedded_svc.settings.defaultMinimizedText = '¡Contáctate con un asesor!'; //(Defaults to Chat with an Expert)
+        embedded_svc.settings.disabledMinimizedText = 'Asesores fuera de línea'; //(Defaults to Agent Offline)
 
-        //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+        embedded_svc.settings.loadingText = 'Cargando'; //(Defaults to Loading)
         //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
 
         // Settings for Chat
