--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
         embedded_svc.settings.displayHelpButton = true; //Or false
         embedded_svc.settings.language = 'es'; //For example, enter 'en' or 'en-US'
 
-        embedded_svc.settings.defaultMinimizedText = 'Contáctate con nosotros'; //(Defaults to Chat with an Expert)
+        embedded_svc.settings.defaultMinimizedText = 'Contáctanos'; //(Defaults to Chat with an Expert)
         embedded_svc.settings.disabledMinimizedText = 'Fuera de línea'; //(Defaults to Agent Offline)
 
         embedded_svc.settings.loadingText = 'Cargando'; //(Defaults to Loading)
